# Sweetshark-Client-v2

./: README.md  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  types.ts  useSettings.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddServerDialog.css  AddServerDialog.tsx  ChangeIconDialog.css  ChangeIconDialog.tsx  ConfirmRemoveDialog.css  ConfirmRemoveDialog.tsx  ContextMenu.css  ContextMenu.tsx  HomePage.css  HomePage.tsx  Pages.css  PermissionsDialog.css  PermissionsDialog.tsx  PttKeybindDialog.css  PttKeybindDialog.tsx  RemoveServerDialog.tsx  RenameServerDialog.css  RenameServerDialog.tsx  ServerContextMenu.tsx  ServerLoadingPage.css  ServerLoadingPage.tsx  ServerSidebar.tsx  ServerView.tsx  SettingsPage.css  SettingsPage.tsx  SettingsView.tsx  Sidebar.css  Sidebar.tsx  TitleBar.css  TitleBar.tsx  UpdateDialog.css  UpdateDialog.tsx  WelcomeView.tsx
src/lib/: webviewManager.ts
