[package]
name = "sweetshark-client"
version = "1.0.0"
description = "A multi-server client for Sharkord"
authors = ["you"]
edition = "2021"

[lib]
name = "sweetshark_client_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
