[package]
name = "sweetshark-client"
version = "0.1.0"
description = "Sweetshark Client - A Sharkord multi-server client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.bundle]
name = "Sweetshark Client"
identifier = "com.sweetshark.client"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.ico"]

[lib]
name = "sweetshark_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# "unstable" is required for WebviewBuilder — it is gated behind this feature
# even when used from Rust (not just from JS).
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
